Registration with email, password recovery and login is done. Need to handle Errors

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,7 @@ dependencies {
 
     //Cropper Image
     implementation "com.theartofdev.edmodo:android-image-cropper:2.8.+"
+
+    //ViewPager2
+    implementation "androidx.viewpager2:viewpager2:1.0.0"
 }
