--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.onboarding.OnBoardingActivity"></activity>
-        <activity android:name=".ui.authorization.AuthActivity"></activity>
+        <activity android:name=".ui.onboarding.OnBoardingActivity" />
+        <activity android:name=".ui.authorization.AuthActivity" />
         <activity android:name=".MainActivity" />
     </application>
 
