--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,4 +88,7 @@ dependencies {
 
     //ViewPager2
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+
+    //Circle Image View
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
