--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,16 +12,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".ui.onboarding.splashscreen.SplashScreenActivity"></activity>
-        <activity android:name=".ui.onboarding.OnBoardingActivity" />
-        <activity android:name=".ui.authorization.AuthActivity">
+        android:theme="@style/FullScreen">
+        <activity android:name=".ui.onboarding.splashscreen.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.onboarding.OnBoardingActivity" />
+        <activity android:name=".ui.authorization.AuthActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".ui.player.PlayerActivity" />
     </application>
