--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,7 @@ dependencies {
 
     //Circle Image View
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+
+    //Date Picker
+    implementation 'com.savvi.datepicker:rangepicker:1.3.0'
 }
