--- a/app/build.gradle
+++ b/app/build.gradle
@@ -103,4 +103,5 @@ dependencies {
 
     //Circle Image View
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.google.android.gms:play-services-auth:18.1.0'
 }
