add vk authorization

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,4 +105,5 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.facebook.android:facebook-login:5.2.0'
+    implementation 'com.vk:androidsdk:2.2.0'
 }
