--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,11 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
+    implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
@@ -56,9 +56,9 @@ dependencies {
     //Network
     implementation "com.squareup.okhttp3:okhttp:4.4.0"
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation "com.squareup.retrofit2:retrofit:2.7.2"
-    implementation "com.squareup.retrofit2:converter-gson:2.7.2"
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.2'
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
 
     //RxJava2
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -106,4 +106,10 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.facebook.android:facebook-login:5.2.0'
     implementation 'com.vk:androidsdk:2.2.0'
+
+    //Push notifications
+    implementation 'com.google.firebase:firebase-messaging:21.0.0'
+    implementation 'com.pusher:push-notifications-android:1.6.2'
 }
+
+apply plugin: 'com.google.gms.google-services'
